--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@ layout: default
     Reseaerch Interests
   </h2>
 
-  <pre>
-    To be updated.
-  </pre>
+
+  I am a researcher in theoretical and computational astrophysics.
+  In particular     I am interested in magnetohydrodynamics (MHD) and plasma physics.
+  During my Ph.D. studies I have mainly focused on dynamo theories, that is,
+  how magnetic fields can be amplifed from some seed field in plasmas.
+  Later on I picked up the skill of doing numerical simulations
+  (the <a href="https://github.com/pencil-code/pencil-code">Pencil Code</a>) 
+  during my postdoc years, and extended my area of interest to include
+  MHD-related processes in planet atmospheres, accretion disks, and the early Universe.
+
 
 </div>
 
