--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
     Reseaerch Interests
   </h2>
 
-
+  <p style="margin-left: 25px;">
   I am a researcher in theoretical and computational astrophysics.
   In particular     I am interested in magnetohydrodynamics (MHD) and plasma physics.
   During my Ph.D. studies I have mainly focused on dynamo theories, that is,
@@ -40,7 +40,7 @@ layout: default
   (the <a href="https://github.com/pencil-code/pencil-code">Pencil Code</a>) 
   during my postdoc years, and extended my area of interest to include
   MHD-related processes in planet atmospheres, accretion disks, and the early Universe.
-
+  </p>
 
 </div>
 
