--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
 
 
   <h2 class="card-subhead">
-    Reseaerch Interests
+    Research Interests
   </h2>
 
   <p style="margin-left: 25px;">
@@ -41,6 +41,10 @@ layout: default
   during my postdoc years, and extended my area of interest to include
   MHD-related processes in planet atmospheres, accretion disks, and the early Universe.
   </p>
+
+  <h2 class="card-subhead">
+    <a href="{{ site.baseurl }}/papers_of_interest.html">Papers of interest</a>
+  </h2>
 
 </div>
 
