--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 
   <pre>
     Hongzhe Zhou (hongzhe.zhou_at_sjtu.edu.cn)
-    Postdoc Fellow, Astronomy and Astrophysics Division
+    Siyuan Postdoc Fellow, Astronomy and Astrophysics Division
     Tsung-Dao Lee Institute, Shanghai Jiao Tong University
     No.520 Shengrong Road, Shanghai, China, 201210
   </pre>
@@ -33,7 +33,7 @@ layout: default
 
   <p style="margin-left: 25px;">
   I am a researcher in theoretical and computational astrophysics.
-  In particular     I am interested in magnetohydrodynamics (MHD) and plasma physics.
+  In particular I am interested in magnetohydrodynamics (MHD) and plasma physics.
   During my Ph.D. studies I have mainly focused on dynamo theories, that is,
   how magnetic fields can be amplifed from some seed field in plasmas.
   Later on I picked up the skill of doing numerical simulations
@@ -41,10 +41,6 @@ layout: default
   during my postdoc years, and extended my area of interest to include
   MHD-related processes in planet atmospheres, accretion disks, and the early Universe.
   </p>
-
-  <h2 class="card-subhead">
-    <a href="{{ site.baseurl }}/papers_of_interest.html">Papers of interest</a>
-  </h2>
 
 </div>
 
