--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ layout: default
 
 
   <h2 class="card-subhead">
-    <a href="{{ site.baseurl }}/cv_en.pdf">Curriculum Vitae and Publications</a>
+    Curriculum Vitae and Publications
+    (<a href="{{ site.baseurl }}/cv_en.pdf">PDF</a>)
   </h2>
 
   <pre>
