--- a/index.html
+++ b/index.html
@@ -59,3 +59,12 @@ layout: default
     </article>
   {% endfor %}
 </div>
+
+<hr>
+
+<p style="margin-left: 25px;">
+<a href="https://m.maploco.com/details/39e66qxs"><img style="border:0px;" src="https://www.maploco.com/vmap/10392544.png" alt="Locations of Site Visitors" title="Locations of Site Visitors"/></a>
+</p>
+
+
+
